test/corpus/iteration.txt
=============================
Collection iteration
=============================

func main() {
    let values:int[] = [1, 2, 3]
    for (value in values) {
        if (value == 2) {
            continue
        }
        print(value)
        break
    }
    var mutable:int[] = [1]
    for (var value in mutable) {
        value += 1
    }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (statement
        (variable_declaration
          (identifier)
          (type_annotation
            (type
              (array_type
                (builtin_type))))
          (expression
            (sequence_literal
              (expression
                (integer_literal))
              (expression
                (integer_literal))
              (expression
                (integer_literal))))))
      (statement
        (for_statement
          (identifier)
          (expression
            (identifier))
          (block
            (statement
              (if_statement
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (integer_literal))))
                (block
                  (statement
                    (continue_statement)))))
            (statement
              (print_statement
                (identifier)
                (expression
                  (identifier))))
            (statement
              (break_statement)))))
      (statement
        (variable_declaration
          (identifier)
          (type_annotation
            (type
              (array_type
                (builtin_type))))
          (expression
            (sequence_literal
              (expression
                (integer_literal))))))
      (statement
        (for_statement
          (identifier)
          (expression
            (identifier))
          (block
            (statement
              (assignment_statement
                (identifier)
                (expression
                  (integer_literal))))))))))
