test/corpus/modules.txt
==================
Modules and visibility
==================

use NK.Window as Window
use Window.Session
public use Window.Event as WindowEvent

public struct Session {}
public class Window {
  var id: int
  protected var state: int
  public var title: str
  public func show() {}
}

public func create() Window.Session {
    return Window.Session()
}

---

(source_file
  (use_declaration
    declaration: (qualified_name
      (identifier)
      (identifier))
    alias: (identifier))
  (use_declaration
    declaration: (qualified_name
      (identifier)
      (identifier)))
  (use_declaration
    declaration: (qualified_name
      (identifier)
      (identifier))
    alias: (identifier))
  (public_declaration
    (structure_definition
      name: (identifier)))
  (public_declaration
    (structure_definition
      name: (identifier)
      (structure_field
        name: (identifier)
        type: (type
          (builtin_type)))
      (structure_field
        name: (identifier)
        type: (type
          (builtin_type)))
      (structure_field
        name: (identifier)
        type: (type
          (builtin_type)))
      (function_definition
        name: (identifier)
        (parameter_list)
        body: (block))))
  (public_declaration
    (function_definition
      name: (identifier)
      (parameter_list)
      return_type: (type
        (named_type
          (type_identifier
            (identifier)
            (identifier))))
      body: (block
        (statement
          (return_statement
            value: (expression
              (invocation_expression
                target: (member_expression
                  object: (identifier)
                  field: (identifier))))))))))
